<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".administratorUsersAddPet.AdministratorUsersAddPetActivity"
    android:background="?attr/colorPrimary">
        <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/insert_name_text_label"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/addUserPetName_Text"
            android:layout_width="217dp"
            android:layout_height="34dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:hint="@string/pet_name"
            android:paddingLeft="20dp"
            android:textColor="?attr/colorAccent"
            android:textColorHint="?attr/colorAccent"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="220dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/species_text_label"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/addUserPetSpecies_Text"
            android:layout_width="217dp"
            android:layout_height="34dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:textColorHint="?attr/colorAccent"
            android:textColor="?attr/colorAccent"
            android:hint="@string/pet_species"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="290dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/breed_text_label"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/addUserPetBreed_Text"
            android:layout_width="217dp"
            android:layout_height="34dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:textColorHint="?attr/colorAccent"
            android:textColor="?attr/colorAccent"
            android:hint="@string/pet_breed"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_ID_text_label"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/addUserPetChipNum_Text"
            android:layout_width="280dp"
            android:layout_height="34dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:layout_marginLeft="20dp"
            android:textColorHint="?attr/colorAccent"
            android:textColor="?attr/colorAccent"
            android:hint="@string/ID_Number"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_birthday_text_label"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/addUserPetBirth_Text"
            android:layout_width="280dp"
            android:layout_height="34dp"
            android:background="?attr/colorPrimaryDarkTrans"
            android:layout_marginLeft="20dp"
            android:textColorHint="?attr/colorAccent"
            android:textColor="?attr/colorAccent"
            android:hint="@string/date_model"
            android:paddingLeft="20dp"
            android:inputType="date"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>