<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".editLostPet.EditLostPetActivity">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="118dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_date_text"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/lostDateEdit"
                    android:layout_width="140dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:hint="@string/date_model"
                    android:paddingLeft="10dp"
                    android:textColor="?attr/colorAccent"
                    android:textColorHint="?attr/colorAccent"
                    android:textSize="20dp"
                    android:inputType="date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageNewLostPet"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/colorAccent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:clickable="true"
                    android:onClick="takePicture"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/insert_lost_pet_name_label"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp" />

            <EditText
                android:layout_width="217dp"
                android:layout_height="34dp"
                android:background="?attr/colorPrimaryDarkTrans"
                android:hint="@string/insert_lost_pet_name"
                android:paddingLeft="20dp"
                android:textColor="?attr/colorAccent"
                android:textColorHint="?attr/colorAccent"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/breed_text_label"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/lostBreedEdit"
                android:layout_width="217dp"
                android:layout_height="34dp"
                android:background="?attr/colorPrimaryDarkTrans"
                android:hint="@string/insert_lost_pet_breed"
                android:paddingLeft="20dp"
                android:textColor="?attr/colorAccent"
                android:textColorHint="?attr/colorAccent"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_lost_pets"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/LostDetailsEdit"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimaryDarkTrans"
                android:hint="@string/details_mock"
                android:paddingLeft="20dp"
                android:textColor="?attr/colorAccent"
                android:textColorHint="?attr/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_ID_text_label"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/lostChipNumEdit"
                android:layout_width="280dp"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimaryDarkTrans"
                android:hint="@string/ID_Number"
                android:paddingLeft="20dp"
                android:textColor="?attr/colorAccent"
                android:textColorHint="?attr/colorAccent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_pet_phone"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/lostPhoneEdit"
                android:layout_width="280dp"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimaryDarkTrans"
                android:hint="@string/phone_mock"
                android:paddingLeft="20dp"
                android:textColor="?attr/colorAccent"
                android:textColorHint="?attr/colorAccent"
                android:inputType="phone"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
