<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".administratorSearchUsers.AdministratorSearchUsersActivity">

    <!--AppBar y Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarAnimalesCliente"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAnimalesCliente"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="Buscar clientes" />
    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="300dp"
        android:gravity="center_vertical"
        android:text="@string/insert_DNI_name_text_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="279dp"
        android:layout_height="61dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insert_DNI_name_text_input"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/buttonUserSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/search"
        android:textColor="@color/colorAccent" />


</android.support.design.widget.CoordinatorLayout>