<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp.SignUpActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_sign_up_name_text_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_sign_up_dni_text_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_sign_up_email_text_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_sign_up_password_text_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <EditText
                android:id="@+id/user_sing_up_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/user_sign_up_dni_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/user_sign_up_email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/user_sign_up_password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/user_sign_up_correct_password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <ImageView
            android:id="@+id/password_correction_icon_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:elevation="24dp"
            android:visibility="visible" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/sign_up_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/sign_up_accept_button_text_label"
        android:textColor="@color/colorPrimary" />

</LinearLayout>