<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/pet_for_adoption_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            tools:src="@tools:sample/avatars"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/pet_for_adoption_breed"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="0dp"
            android:textAlignment="center"
            android:textSize="20dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_text_label"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pet_for_adoption_date"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_pet_for_adoption"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pet_for_adoption_details"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_pet_phone"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pet_for_adoption_phone"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>